--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <h1 class="heading">TO DO</h1>
       </div>
       <div class="col-xs-12 col-xs-offset-12 form-group inputs">
-        <label>Date:</label>
+        <label>Date</label>
         <input id="date" type="text" class="form-control" placeholder="DATE: ">
-        <label>Finish By:</label>
+        <label>Finish By</label>
         <input id="finish" type="text" class="form-control" placeholder="FINISH BY: ">
       </div>
     </div>
